# sn-testnet-deploy

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  release-plz.toml
.github/workflows/: merge.yml  release.yml  version_bump.yml
resources/ansible/: ansible.cfg  antctl_inventory.yml  auditor.yml  build.yml  cache_webserver.yml  chunk_trackers.yml  cleanup_logs.yml  configure_swapfile.yml  create_auditor_image.yml  create_build_image.yml  create_node_image.yml  create_upnp_image.yml  data_retrieval.yml  delete_node_records_cron.yml  downloaders.yml  evm_nodes.yml  extend_volume_size.yml  faucet.yml  faucet_upgrade.yml  fetch_scan_repair_results.yml  fetch_static_upload_results.yml  full_cone_nat_gateway.yml  fund_uploaders.yml  genesis_node.yml  logs.yml  logstash-main-public.crt  logstash.yml  nat_gateway.yml  node_manager_inventory.yml  node_manager_upgrade.yml  node_status.yml  nodes.yml  peer_cache_node.yml  port_restricted_cone_nat_gateway.yml  private_node_config.yml  private_nodes.yml  repair_files.yml  reset_nodes.yml  reset_to_n_nodes.yml  rotate_peer_cache_nodes.yml  (+36 more)
resources/ansible/callback_plugins/: show_hosts.py
resources/ansible/extra_vars/: digital_ocean.json
resources/ansible/inventory/: dev_inventory_digital_ocean.yml
resources/example-inputs/: deploy-chunk-trackers.md
resources/packer/: build.pkr.hcl  node.pkr.hcl
resources/packer/auditor/: auditor.pkr.hcl
resources/packer/node/: node.pkr.hcl
resources/packer/upnp/: upnp.pkr.hcl
resources/scripts/: copy_node_files.sh  copy_node_logs.sh  get_peer_multiaddr.sh  install_ansible.sh  reorganise_logs.py  resource-usage.sh  tar_log_files.sh  upload-random-data.sh  upload_test_data.sh
resources/terraform/client/digital-ocean/: variables.tf
resources/terraform/clients/digital-ocean/: PROD-01.tfvars  dev-images-ams3.tfvars  dev-images-lon1.tfvars  dev.tfvars  main.tf  production-images-lon1.tfvars  staging-images-lon1.tfvars  staging.tfvars  variables.tf
resources/terraform/digital-ocean/: delete_workspaces.sh  main.tf  variables.tf
resources/terraform/logstash/digital-ocean/: main.tf  variables.tf
resources/terraform/symlinked-antnode/digital-ocean/: dev.tfvars  main.tf  outputs.tf  variables.tf
resources/terraform/testnet/digital-ocean/: .terraform.lock.hcl  PROD-01.tfvars  (+14 more)
scripts/: scan_result_tools.py  upload_results.py
src/: ansible.rs  bootstrap.rs  client.rs  clients.rs  deploy.rs  digital_ocean.rs  error.rs  funding.rs  infra.rs  inventory.rs  lib.rs  logs.rs  logstash.rs  main.rs  manage_test_data.rs  network_commands.rs  private_nodes.rs  reserved_ip.rs  rpc_client.rs  s3.rs  safe.rs  setup.rs  ssh.rs  symlinked_antnode.rs  terraform.rs  uploaders.rs  upscale.rs
src/ansible/: environment_inventory.rs  extra_vars.rs  inventory.rs  mod.rs  provisioning.rs
src/cmd/: client.rs  clients.rs  deployments.rs  funds.rs  logs.rs  misc.rs  mod.rs  network.rs  nginx.rs  nodes.rs  provision.rs  telegraf.rs  upgrade.rs  uploaders.rs
src/tests/: build_safe_network_binaries.rs  clean.rs  create_infra.rs  deploy.rs  get_genesis_multiaddr.rs  init.rs  mod.rs  provision_build_vm.rs  provision_faucet.rs  provision_genesis_node.rs  provision_remaining_nodes.rs  setup.rs  upload_test_data.rs
src/tests/logstash/: clean.rs  deploy.rs  get_stack_hosts.rs  init.rs  mod.rs
(+176 files in other folders)
