[package]
name = "sn-testnet-deploy"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
path="src/main.rs"
name="testnet-deploy"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
dirs-next = "2.0.0"
dotenv = "0.15.0"
flate2 = "1.0"
indicatif = "0.17.3"
inquire = "0.6.2"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.23"
tar = "0.4"
tokio = { version = "1.26", features = ["full"] }

[dev-dependencies]
assert_fs = "~1.0"
httpmock = "0.6"
mockall = "0.11.3"
predicates = "2.0"
