[package]
name = "sn-testnet-deploy"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
path="src/main.rs"
name="testnet-deploy"

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1"
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
chrono = "0.4.31"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
dirs-next = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
flate2 = "1.0"
fs_extra = "1.2.0"
log = "0.4"
indicatif = "0.17.3"
inquire = "0.6.2"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.23"
tar = "0.4"
tempfile = "3.8.0"
tokio = { version = "1.26", features = ["full"] }
tokio-stream = "0.1.14"

[dev-dependencies]
assert_fs = "~1.0"
httpmock = "0.6"
mockall = "0.11.3"
predicates = "2.0"
