[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
name = "sn-testnet-deploy"
description = "Tool for creating Autonomi networks"
readme = "README.md"
repository = "https://github.com/maidsafe/sn-testnet-deploy"
version = "0.2.95"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
path="src/main.rs"
name="testnet-deploy"

[dependencies]
alloy = { version = "0.15.6", default-features = false, features = ["signers"] }
ant-releases = "0.4.0"
ant-service-management = { version = "0.4.13" }
async-recursion = "1.0.4"
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
chrono = "0.4.31"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.0.4"
dirs-next = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
evmlib = { version = "0.4.0" }
flate2 = "1.0"
futures = "~0.3.13"
fs_extra = "1.2.0"
libp2p = { version = "0.54.1", features = [] }
log = "0.4"
indicatif = "0.17.3"
inquire = "0.6.2"
# watch out updating this, protoc compiler needs to be installed on all build systems
# arm builds + musl are very problematic
prost = { version = "0.9" }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10.7"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0.108"
thiserror = "1.0.23"
tar = "0.4"
tempfile = "3.8.0"
tokio = { version = "1.26", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.6.2" }
walkdir = "~2.5.0"

[dev-dependencies]
httpmock = "0.6"
